--- a/project.ipynb
+++ b/project.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# A temporary placeholder project"
+    "# A dsadaad placeholder project"
    ]
   },
   {
