--- a/project.ipynb
+++ b/project.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# A dsadaad placeholder ss"
+    "# Goran was here"
    ]
   },
   {
@@ -43,7 +43,7 @@
     ]
    },
    "source": [
-    "## 1. This is a task title"
+    "## 1. This is a task title - goran"
    ]
   },
   {
@@ -262,8 +262,7 @@
    "cell_type": "markdown",
    "metadata": {
     "tags": [
-     "type:NotebookTask",
-     "key: f80fabdcdf"
+     "type:NotebookTask"
     ]
    },
    "source": [
@@ -370,8 +369,7 @@
    "cell_type": "markdown",
    "metadata": {
     "tags": [
-     "type:NotebookTask",
-     "key: 9e0a0cf232"
+     "type:NotebookTask"
     ]
    },
    "source": [
@@ -478,8 +476,7 @@
    "cell_type": "markdown",
    "metadata": {
     "tags": [
-     "type:NotebookTask",
-     "key: d7fda0fc96"
+     "type:NotebookTask"
     ]
    },
    "source": [
