--- a/project.ipynb
+++ b/project.ipynb
@@ -54,7 +54,9 @@
     ]
    },
    "source": [
-    "This will render as a text cell in notebook in the final DataCamp project.\n"
+    "This will render as a text cell in notebook in the final DataCamp project.\n",
+    "![Goran added an image](img/demo.png)\n",
+    "\n"
    ]
   },
   {
